# fairdm-geo

./: .gitignore  CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  changelog.yml  dependencies.yml  docs.yml  on-release-main.yml  tests.yml
compose/development/: django
config/: production.py  settings.py
docs/: readme.md
example/: config.py  models.py  tables.py
example/migrations/: 0001_initial.py
fairdm_geo/: __init__.py  admin.py  apps.py  config.py  imports.py  metadata.py  plugins.py  resources.py  settings.py  tables.py  utils.py
fairdm_geo/core/: __init__.py  apps.py
fairdm_geo/core/models/: __init__.py  base.py
fairdm_geo/factories/: location.py
fairdm_geo/geology/: generic_models.py
fairdm_geo/geology/geologic_time/: apps.py  models.py  urls.py
fairdm_geo/geology/geologic_time/migrations/: 0001_initial.py  0002_remove_geologicaltimescale_id_and_more.py  0003_geologicaltimescale_meta.py  0004_remove_geologicaltimescale_vocab_name.py
fairdm_geo/geology/lithology/: apps.py  models.py
fairdm_geo/geology/lithology/migrations/: 0001_initial.py  0002_alter_simplelithology_options.py  0003_remove_simplelithology_id_alter_simplelithology_name.py  0004_simplelithology_meta.py  0005_remove_simplelithology_vocab_name.py
fairdm_geo/geology/rock_samples/: apps.py  config.py  models.py
fairdm_geo/geology/stratigraphy/: apps.py  models.py
fairdm_geo/geology/stratigraphy/migrations/: 0001_initial.py  0002_alter_stratigraphicunit_genesis_and_more.py
fairdm_geo/gis/natural_earth/: apps.py
fairdm_geo/gis/plates/: models.py
fairdm_geo/gis/provinces/: apps.py  models.py
fairdm_geo/models/features/: areas.py  sites.py
fairdm_geo/models/samples/: generic.py  intervals.py  rock.py
fairdm_geo/rocks/: __init__.py  apps.py  config.py  settings.py
fairdm_geo/rocks/migrations/: 0001_initial.py  __init__.py
fairdm_geo/rocks/models/: __init__.py  base.py  samples.py
fairdm_geo/sites/: __init__.py  apps.py  config.py  settings.py
fairdm_geo/sites/migrations/: 0001_initial.py  __init__.py
fairdm_geo/sites/models/: __init__.py  sites.py
fairdm_geo/templates/fairdm_geo/plugins/: map copy.html  map.html
fairdm_geo/vocabularies/cgi/: geosciml.py
tests/: settings.py
